src/snapshots/expr/unary_op_not.txt
~~~META
description=Unary not operation expression
type=expr
~~~SOURCE
!isValid
~~~PROBLEMS
UNKNOWN OPERATOR

This looks like an operator, but it's not one I recognize!

!isValid
Note: This is a parse error. Check your syntax.
~~~TOKENS
OpBang(1:1-1:2),LowerIdent(1:2-1:9),EndOfFile(1:9-1:9),
~~~PARSE
(malformed_expr (1:1-1:2) "expr_unexpected_token")
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END